# wwi-docker-develop

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  fabfile.py  gitpod.Dockerfile  gpurl.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-gitpod.txt  requirements.txt  setup.cfg  setup.sh
.github/workflows/: lint.yml
cms/: urls.py  wsgi.py
cms/home/: models.py
cms/home/templates/home/: home_page.html
cms/home/templates/pages/: news_page.html
cms/pages/: models.py
cms/pages/migrations/: 0001_initial.py  0002_auto_20211025_1530.py  0003_auto_20211105_1040.py  0004_postpage_wp_post_meta.py  0005_add_header_image.py  0006_author.py  0007_postpage_author.py  0008_add_email_to_author.py  0009_alter_postpage_body.py
cms/pages/static/: stock.js
cms/settings/: base.py  dev.py  local.py
cms/static/css/: _base.scss  _nav.scss  app.css  app.css.map  app.scss
cms/static/js/: app.js
cms/templates/: base.html
cms/utils/: inline_shortcodes.py  prefilters.py  wagtail_hooks.py
docker/: bashrc.sh  docker-compose-wordpress.yml  wagtail-init.sh
example/: urls.py  wsgi.py
example/home/: models.py
example/pages/: apps.py  import_hooks.py  inline_shortcodes.py  models.py  wagtail_hooks.py
example/pages/migrations/: 0001_initial.py  0002_auto_20211025_1530.py  0003_auto_20211105_1040.py  0004_postpage_wp_post_meta.py  0005_add_header_image.py  0006_author.py  0007_postpage_author.py  0008_add_email_to_author.py  0009_alter_postpage_body.py
example/pages/static/: ep.js  stock-frontend.js
example/pages/templatetags/: earning_potential_tags.py
example/settings/: base.py  dev.py  local.py
(+5 files in other folders)
