[tool.poetry]
name = "wwi-docker-develop"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^2.15"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
