[tool.poetry]
name = "wwi-docker-develop"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^3.0"
python-dotenv = "~0.19.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
django-extensions = "~3.1.5"
black = "~22.3.0"
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"
coverage = "~6.2"
Fabric = "^2.7.0"
rich = "^12.4.1"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
